--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-countup": "0.0.2",
     "react-native-elements": "^0.19.1",
     "react-native-vector-icons": "^4.6.0",
+    "react-native-snap-carousel": "^3.7.0",
     "react-navigation": "^1.5.11",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
